# finddd

./: .pre-commit-config.yaml  README.md  Taskfile.yml  pyproject.toml
src/finddd/: __init__.py  const.py  find.py  match.py  test_find.py  test_match.py
