[tool.pdm]
[tool.pdm.dev-dependencies]
dev = [
    "black>=23.3.0",
    "isort>=5.12.0",
    "pytest>=7.3.1",
    "pre-commit>=3.3.2",
]

[project]
name = "finddd"
version = "0.2.1"
description = ""
authors = [
    {name = "ayasechan", email = "529157057@qq.com"},
]
dependencies = [
    "igittigitt>=2.1.2",
]
requires-python = ">=3.8"
readme = "README.md"
license = {text = "MIT"}

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

[tool.ruff]
ignore = ["F403", "F405", "E741",]